tests/rosetta/transpiler/Clojure/arithmetic-evaluation.error
run error: exit status 1
Syntax error (IllegalArgumentException) compiling fn* at (/workspace/mochi/tests/rosetta/transpiler/Clojure/arithmetic-evaluation.clj:18:1).
Cannot assign to non-mutable: while_flag_1

Full report at:
/tmp/clojure-8131023475437361205.edn
